Backend/vpc/main.tf
resource "aws_vpc" "app_vpc" {
  cidr_block = var.vpc_cidr
}

data "aws_availability_zones" "azs" {}

resource "aws_subnet" "public_1" {
  vpc_id                  = aws_vpc.app_vpc.id
  cidr_block              = var.pub_sub_1_cidr
  availability_zone       = data.aws_availability_zones.azs.names[0]
  map_public_ip_on_launch = true


}

resource "aws_subnet" "public_2" {
  vpc_id                  = aws_vpc.app_vpc.id
  cidr_block              = var.pub_sub_2_cidr
  availability_zone       = data.aws_availability_zones.azs.names[1]
  map_public_ip_on_launch = true

}

resource "aws_subnet" "private_1" {
  vpc_id            = aws_vpc.app_vpc.id
  cidr_block        = var.pri_sub_1_cidr
  availability_zone = data.aws_availability_zones.azs.names[0]

}

resource "aws_subnet" "private_2" {
  vpc_id            = aws_vpc.app_vpc.id
  cidr_block        = var.pri_sub_2_cidr
  availability_zone = data.aws_availability_zones.azs.names[1]

}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.app_vpc.id

}


resource "aws_eip" "nat" {}

resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public_1.id

}


resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.app_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

}


resource "aws_route_table" "private_rt" {
  vpc_id = aws_vpc.app_vpc.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat.id
  }
}


resource "aws_route_table_association" "pub1" {
  subnet_id      = aws_subnet.public_1.id
  route_table_id = aws_route_table.public_rt.id
}

resource "aws_route_table_association" "pub2" {
  subnet_id      = aws_subnet.public_2.id
  route_table_id = aws_route_table.public_rt.id
}

resource "aws_route_table_association" "pri1" {
  subnet_id      = aws_subnet.private_1.id
  route_table_id = aws_route_table.private_rt.id
}

resource "aws_route_table_association" "pri2" {
  subnet_id      = aws_subnet.private_2.id
  route_table_id = aws_route_table.private_rt.id
}
